--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "test",
     "version": "0.1.0",
+    "homepage": "./",
     "private": true,
     "dependencies": {
         "@dnd-kit/core": "^3.1.1",
